--- a/views/index.pug
+++ b/views/index.pug
@@ -1,1 +1,9 @@
-h1 TEST
+
+extends layout.pug 
+
+block contents 
+  style
+    include ../public/stylesheets/index.css
+
+  article
+    h1 Welcome to White Bird Help Book
