--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,4 +1,36 @@
+html, body {
+  font-family: "Roboto", sans-serif;
+}
+
 h1 {
-  color: purple;
-  font-size: 34px;
+  color: white;
+  font-size: 1.5em;
+}
+
+h2 {
+  color: white;
+  font-size: 24;
+}
+
+h3 {
+  color: black;
+  font-size: 20;
+}
+
+h4 {
+  color: color1;
+  font-size: 20;
+  font-style: bold;
+}
+
+body {
+  background-color: black;
+}
+
+header {
+  font-family: "Roboto", sans-serif;
+}
+
+article {
+  font-family: "Roboto", sans-serif;
 }
