more styling index

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,4 +6,20 @@ block contents
     include ../public/stylesheets/index.css
 
   article
-    h1 Welcome to White Bird Help Book
+    h1 Welcome
+    p Select an option below to help us best serve your needs. 
+
+    a(href='/service') 
+      div.btn
+        div.btn-copy
+          h2 I am a seeking help
+
+    a(href='/provider') 
+      div.btn
+        div.btn-copy
+         h2 I am a service provider or organiation
+
+    a(href='/contributor') 
+      div.btn
+        div.btn-copy
+          h2 I am seeking to contribute
