--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -1,54 +1,125 @@
 
 $font-stack: 'Roboto', sans-serif;
-$color1: black;
+$color1: white;
 $color2: white;
-$color3: black;
+$color3: #DCDCDC;
 $color4: black;
 
 
 
 $p-height: 24px; 
-$p-size: 15px ;
+$p-size: 1em;
 $p-padding: 20 20 20 20 ;
 $zero-margin: 0 0 0 0;
 
-$small-copy: .9em;
+$small-copy: .8em;
 $small-height: 1.2em;
 
 
 html, body {
 	font-family: $font-stack;
+	margin: 0;
+	padding: 0;
+	min-width: 100%;
+	background-color: $color3;
 }
+
+/* Headings  and font style */
+
 h1 {
-  color: $color2;
-  font-size: 1.5em;
+  color: $color1;
+  font-size: 2.2em;
+  font-weight: 500;
 }
 
 h2 {
-	color: $color2;
-	font-size: 24;
+	color: $color1;
+	font-size: 1.7;
+	font-weight: 400;
 }
 
 h3 {
 	color: $color1;
-	font-size: 20;
+	font-size: 1.3;
 }
 
-h4 {
-	color: color1;
-	font-size: 20;
-	font-style: bold;
+p {
+	color: $color1;
+	font-size: $p-size;
+	line-height: $p-height;
 }
 
+p.small {
+	color: $color1;
+	font-size: $small-copy;
+	line-height: $small-height;
+}
+
+/* content layout */ 
 
 body { 
-	background-color: $color1;
+	background-color: $color3;
 }
 
 header {
-	font-family: $font-stack
+	font-family: $font-stack;
+	background-color: $color1;
+	height: 75;
+	margin: 0;
+	padding: 0;
+
+	li {
+		display: inline-block;
+		width: 30%;
+		margin: 25px 1.5% 0 1.5%;
+		text-align: center;
+		text-decoration: none;
+		a {
+			text-decoration: none;
+			color: $color4;
+		}
+	}
 }
 
 article {
 	font-family: $font-stack;
+	max-width: 600px;
+	margin: auto;
+}
+
+/* page elements */
+
+a {
+	text-decoration: none;
+}
+
+div.btn {
+	width: 100%;
+	height: 150;
+	margin: 2% 0 2% 0;
+	border-radius: 7px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	div.btn-copy {
+	  position: relative;
+	  float: left;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-50%, -50%);
+	}
+	h2 {
+		text-align: center;
+	}
+}
+
+
+
+@media (max-width: 720px){ 
+  article { 
+  	width: 90%;
+  }
+  div.btn {
+  	h2 {
+    	font-size: 1.5em;
+  	}
+  }
 }
