--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block contents
     h1 Welcome
     p Select an option below to help us best serve your needs. 
 
-    a(href='/service') 
+    a(href='/services') 
       div.btn
         div.btn-copy
           h2 I am a seeking help
