--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,4 +25,7 @@ html
           li 
             a(href='/search' class={active: title === 'Say Hello'}) Search
 
+        include search.pug
+        +search
+
     block contents
