--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,14 @@ block contents
   style
     include ../public/stylesheets/index.css
 
+  div.purple-box
+    img(src='')
+    h1 THE
+    h1 HELP
+    h1 BOOK
+    h3 This is a tagline
+
+   
   article
     h1 Welcome
     p Select an option below to help us best serve your needs. 
