--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -1,9 +1,11 @@
 
-$font-stack: 'Roboto', sans-serif;
+$font-sans: 'Roboto', sans-serif;
+$font-serif: 'Roboto Slab', sans-serif;
 $color1: white;
 $color2: white;
-$color3: #DCDCDC;
-$color4: black;
+$color3: #6A74AF;
+$color4: #4a4a4a;
+$color5: #D8BEE5;
 
 
 
@@ -17,7 +19,7 @@ $small-height: 1.2em;
 
 
 html, body {
-	font-family: $font-stack;
+	font-family: $font-sans;
 	margin: 0;
 	padding: 0;
 	min-width: 100%;
@@ -28,19 +30,24 @@ html, body {
 
 h1 {
   color: $color1;
+  font-family: $font-sans;
   font-size: 2.2em;
   font-weight: 500;
 }
 
 h2 {
-	color: $color1;
+  	font-family: $font-serif;
+	color: $color3;
 	font-size: 1.7em;
 	font-weight: 400;
 }
 
 h3 {
-	color: $color1;
-	font-size: 1.3;
+  	font-family: $font-sans;
+	color: $color4;
+	font-size: 1.3em;
+    font-weight: 400;
+
 }
 
 p {
@@ -58,11 +65,11 @@ p.small {
 /* content layout */ 
 
 body { 
-	background-color: $color3;
+	background-color: $color1;
 }
 
 header {
-	font-family: $font-stack;
+	font-family: $font-sans;
 	background-color: $color1;
 	height: 75;
 	margin: 0;
@@ -81,10 +88,26 @@ header {
 	}
 }
 
+div.purple-box {
+    background: linear-gradient($color3, $color5);
+    height: 100%;
+    padding: 96 48 96 48;
+}
 article {
-	font-family: $font-stack;
+	font-family: $font-serif;
 	max-width: 600px;
 	margin: auto;
+	padding-bottom: 20;
+	background-color: $color1;
+	h1 {
+	  text-align: center;
+	}
+	h2 {
+	  text-align: center;
+	}
+	h3 {
+		text-align: center;
+	}
 }
 
 /* page elements */
@@ -93,10 +116,26 @@ a {
 	text-decoration: none;
 }
 
-div.btn {
-	width: 100%;
-	height: 150;
-	margin: 2% 0 2% 0;
+div.btn-square {
+	width: 45%;
+	height: 150px;
+	display: inline-block;
+	margin: 2.5% 1.25% 2.5% 1.25%;
+	border-radius: 7px;
+	img {
+		display: block;
+		margin: auto;
+	}
+	h2 {
+	  text-align: center;
+	}
+}
+
+div.btn-rect {
+	width: 95%;
+	height: 100px;
+	display: block;
+	margin: 20 2.5% 20 2.5%;
 	border-radius: 7px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	div.btn-copy {
