--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -3,12 +3,26 @@ form#search {
 	width: 100%;
 }
 div.search {
-	width: 600px;
+	width: 500px;
 	margin: auto;
+	position: relative;
+	color: #f0f0f0
+}
+div.search .icon{
+	position: absolute;
+	color: #6b6b6b;
+	top: 33%;
+	padding-left: 20px;
 }
 input#search {
-	height: 50px;
-	border-radius: 20px;
-	width: 100%;
+	padding: 10px;
+	height: 40px;
+	background: rgba(181,181,181,0.62);
+	border-radius: 40px;
+	padding-left: 45px;
+	width: 80%;
+	color: white;
+	font-size: 1em;
+	font-family: "Roboto", sans-serif;
 
 }
