--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,8 @@ html
     meta(property='' content='')
     link(rel='' type='')
     link(rel='stylesheet' 'https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed')
+    link(href='//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet')
+
 
     style
       include ../public/stylesheets/index.css
