--- a/views/index.pug
+++ b/views/index.pug
@@ -1,20 +1,23 @@
 
 extends layout.pug 
 
+
 block contents 
   style
     include ../public/stylesheets/index.css
 
   div.purple-box
-    h1 THE
-    h1 HELP
-    h1 BOOK
-    h3 This is a tagline
+    div.inner-box
+      img(src='../public/images/put-a-bird-on-it_preview.png').logo
+      h1 THE HELP BOOK
+      h3 This is a tagline
 
-   
-  article
-    include search.pug
-    +search
+    div.search
+      include search.pug
+      +search
+    
+  section.primary-options
+    div.banner
 
     h2 How can we help you?
     h3 Common Services
@@ -22,39 +25,48 @@ block contents
     a(href='/services') 
       div.btn-square
         img(src='../public/images/mental-services.png')
-        h3 Mental Health Services
+        div.btn-copy
+          h3 Mental Health Services
 
     a(href='/provider') 
       div.btn-square
         img(src='../public/images/medical-services.png')
-        h3 Medical Health Services
+        div.btn-copy
+          h3 Medical Health Services
 
     a(href='/contributor') 
       div.btn-square
         img(src='/public/images/dental-services.png')
-        h3 Dental Health Services    
+        div.btn-copy
+          h3 Dental Health Services    
 
     a(href='/contributor') 
       div.btn-square
         img(src='/public/images/basic-services.png')
-        h3 Basic Needs
+        div.btn-copy
+          h3 Basic Needs
 
-    a(href='/provider') 
+  section.secondary-options
+    h3 More options
+
+    a(href='/category') 
       div.btn-rect
         div.btn-copy
-         h3 Search by category
+          p Search by category
+          span.icon
+            i.fa.fa-angle-right
 
     a(href='/contributor') 
       div.btn-rect
         div.btn-copy
-          h3 Search by agency  
+          p Search by agency  
 
     a(href='/contributor') 
       div.btn-rect
         div.btn-copy
-          h3 I want to update/edit a record
+          p I want to update/edit a record
 
     a(href='/contribute') 
       div.btn-rect
         div.btn-copy
-          h3 I want to add a new record
+          p I want to add a new record
