--- a/views/listings.pug
+++ b/views/listings.pug
@@ -6,17 +6,42 @@ block contents
   style
     include ../public/stylesheets/listing.css
 
-  article
-    
-    each val in record
-      section
+  article.listings
+    each val in record     
+      section.service
         a(href='/listing/' + val._id)
-          h2=val.Service_Name
-          p=val.Hours_of_Operation
-          p=val.Service_Location_Email
-          p=val.Hours_of_Operation
-          p=val.Physical_Site_Address_1
-          p=val.Physical_Site_City
-          p=val.Physical_Site_State
-          p=val.Physical_Site_Zip
+          h3=val.Service_Name
+          div.left
+            div.address-1
+              span.icon
+                i.fa.fa-map-marker 
+              span
+                if !val.Physical_Site_Address_1
+                  p='unavailable'
+                else 
+                  p=val.Physical_Site_Address_1 
+                  span.address-2
+                    p=val.Physical_Site_City + ', ' + val.Physical_Site_State + ' ' + val.Physical_Site_Zip
+            div.phone
+              span.icon
+                i.fa.fa-phone
+              p=val.Main_Phone
+
+          div.right    
+            div.email
+              span.icon
+                i.fa.fa-envelope
+              a(href='mailto:' + val.Service_Location_Email).email email
+            div.web
+              span.icon
+                i.fa.fa-link
+              a(href=val.Web_Address).web web
+            div.hours
+              span.icon
+                i.fa.fa-clock-o 
+              p=(val.Hours_of_Operation).substr(0,15)
+            
+
+          
+
 
