--- a/views/index.pug
+++ b/views/index.pug
@@ -22,25 +22,25 @@ block contents
     h3 Common Services
 
   .container 
-    a(href='/services') 
+    a(href='/listings') 
       div.btn-square
         img(src='../public/images/mental-services.png')
         div.btn-copy
           h3 Mental Health Services
 
-    a(href='/category/medica-serivces') 
+    a(href='/listings') 
       div.btn-square
         img(src='../public/images/medical-services.png')
         div.btn-copy
           h3 Medical Health Services
 
-    a(href='/category/dental-services') 
+    a(href='/listings') 
       div.btn-square
         img(src='/public/images/dental-services.png')
         div.btn-copy
           h3 Dental Health Services    
 
-    a(href='/category/basic-services') 
+    a(href='/listings') 
       div.btn-square
         img(src='/public/images/basic-services.png')
         div.btn-copy
