--- a/views/listings.pug
+++ b/views/listings.pug
@@ -6,6 +6,12 @@ block contents
   style
     include ../public/stylesheets/listing.css
 
+  div.purple-box
+    div.inner-box
+      img(src='../public/images/put-a-bird-on-it_preview.png').logo
+      h1 THE HELP BOOK
+      h3 A Platform for Care
+      
   article.listings
     each val in record     
       section.service
