--- a/views/access.pug
+++ b/views/access.pug
@@ -6,11 +6,4 @@ block contents
 
   article
     section
-      h2=record.Service_Name
-      p=record.Hours_of_Operation
-      p=record.Service_Location_Email
-      p=record.Hours_of_Operation
-      p=record.Physical_Site_Address_1
-      p=record.Physical_Site_City
-      p=record.Physical_Site_State
-      p=record.Physical_Site_Zip
+      h2="Please Log In :("
