--- a/views/index.pug
+++ b/views/index.pug
@@ -44,7 +44,7 @@ block contents
         div.btn-square
           img(src='/public/images/basic-services.png')
           div.btn-copy
-            h3 Basic Needs
+            h3 Your basic Needs
 
   section.secondary-options
     h3 More options
@@ -76,3 +76,16 @@ block contents
           p I want to add a new record
         span.icon
          i.fa.fa-angle-right
+
+  section.image 
+    img(src='../public/images/tree_horizontal.jpg')
+  
+  section.mission
+    p Since 1970, White Bird has enabled people to gain control of their social, emotional and physical well-being through direct service, education and community.
+
+    p The Help Book is an initiative designed to connect those in need with those most suited to help.
+
+    p It was created to empower Oregonians to take control of their health by providing them with an all-in-one wellness resource directory.
+
+
+
