--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,14 @@ html
     style
       include ../public/stylesheets/index.css
 
+    block head
+
     body 
-      block head
-       
-    block contents
+
+      block contents
+   
+    footer
+      ul
+        li Donate
+        li Volunteer 
+        li Contact
