--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -23,6 +23,7 @@ html, body {
 	font-family: $font-sans;
 	margin: 0;
 	padding: 0;
+	height: 100%;
 	max-width: 100%;
 	overflow-x: hidden;
 	background-color: $color6;
@@ -125,7 +126,7 @@ div.purple-box {
 section.secondary-options {
   background-color: $color1;
 	padding-top: 36px;
-	padding-bottom: 36px;	
+	padding-bottom: 48px;	
 	width: 100%;
 	margin: auto;
 	h3 {
@@ -196,6 +197,39 @@ div.btn-rect {
 	}
 	h2 {
 		text-align: center;
+	}
+}
+
+section.image {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    text-align:center;
+	img {
+	  margin: auto;
+	  width: 100%;
+	}
+}
+
+section.mission {
+	width: 400px;
+	margin: 48 auto 48 auto;
+
+}
+
+footer {
+  background-color: $color4;
+  bottom: 0;
+  height: 100px;
+	ul {
+	  margin: 0;
+	  li {
+	    color: $color1;
+	    display: inline-block;
+	    width: 33%;
+	    padding: 40 0 40 0;
+	    text-align: center;
+	  }
 	}
 }
 
