--- a/views/login.pug
+++ b/views/login.pug
@@ -4,12 +4,19 @@ block contents
   style
     include ../public/stylesheets/login.css
 
+
+  div.purple-box
+    div.inner-box
+      img(src='../public/images/put-a-bird-on-it_preview.png').logo
+      h1 THE HELP BOOK
+      h3 A Platform for Care
+  
   article
-    section
+    section.login
       h2= 'Please Log In'
 
       form(action='/login' method='POST')
         input(type='text' name='username' placeholder='username')
         input(type='password' name='password' placeholder='password')
 
-        button Login
+        input#submit(type='submit' value='Login') 
