fixing material icons

--- a/views/listings.pug
+++ b/views/listings.pug
@@ -12,7 +12,9 @@ block contents
       h1 THE HELP BOOK
       h3 A Platform for Care
       
+
   article.listings
+    h2 Alphabetical listings
     each val in record     
       section.service
         a(href='/listing/' + val._id)
