--- a/public/stylesheets/listing.scss
+++ b/public/stylesheets/listing.scss
@@ -1,5 +1,4 @@
 body {
-  backgroud-color: white;
 }
 
 div.purple-box {
@@ -26,6 +25,7 @@ div.purple-box {
     }
 }
 
+
 article.single-listing {
 	h1 {
 	  text-align: center;
@@ -48,23 +48,25 @@ article.single-listing {
 }
 
 article.listings {
-	width: 400px;
-	margin: auto;
+  h2 {
+    text-align: center;
+  }
+  width: 400px;
+  margin: auto;
 
 }
 
 section.service {
 	background-color: white;
 	border-left: 3px #6a74af solid;
-	margin: 10px;
+	margin: 10 0 10 0;
 	padding: 1 20 1 20;
 	h3 {
 	  size: 1.2em;
 	  font-weight: 500;
 	}
 	span.icon {
-	  position: absolute;
-	  color: #6b6b6b;
+	float:left;
 	}
 	p {
 	  padding-left: 25px;
