fine tuning for demo

--- a/views/index.pug
+++ b/views/index.pug
@@ -49,28 +49,28 @@ block contents
   section.secondary-options
     h3 More options
 
-    a(href='/category') 
+    a(href='/listings') 
       div.btn-rect
         div.btn-copy
           p Search by category
         span.icon
          i.fa.fa-angle-right
 
-    a(href='/contributor') 
+    a(href='/listings') 
       div.btn-rect
         div.btn-copy
           p Search by agency
         span.icon
          i.fa.fa-angle-right 
 
-    a(href='/contributor') 
+    a(href='/listings') 
       div.btn-rect
         div.btn-copy
           p I want to update/edit a record
         span.icon
          i.fa.fa-angle-right
 
-    a(href='/contribute') 
+    a(href='/listings') 
       div.btn-rect
         div.btn-copy
           p I want to add a new record
