--- a/public/stylesheets/listing.scss
+++ b/public/stylesheets/listing.scss
@@ -27,8 +27,17 @@ div.purple-box {
 
 
 article.single-listing {
+
+
 	h1 {
 	  text-align: center;
+	}
+	img {
+	  width: 100%;
+	}
+	section {
+	    padding: 20;
+
 	}
 	table {
 	border-collapse: collapse;
