--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -20,7 +20,7 @@ div.search .icon{
 input#search {
 	margin: auto;
 	height: 40px;
-	background: rgba(181,181,181,0.62);
+	background: rgba(255, 255, 255,0.3);
 	border-radius: 40px;
 	padding-left: 45px;
 	width: 300px;
