make the colors and language pop

--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -112,6 +112,11 @@ div.purple-box {
     h3 {
       text-align: center;
     }
+    p {
+      color: white;
+      text-align: center;
+      font-weight: 100;
+    }
     div.inner-box {
       margin: auto;
       width: 400px;
