--- a/views/login.pug
+++ b/views/login.pug
@@ -9,7 +9,7 @@ block contents
     div.inner-box
       img(src='../public/images/put-a-bird-on-it_preview.png').logo
       h1 THE HELP BOOK
-      h3 A Platform for Care
+      h3 Building community through wellness and empowerment
   
   article
     section.login
