--- a/public/stylesheets/listing.scss
+++ b/public/stylesheets/listing.scss
@@ -75,7 +75,8 @@ section.service {
 	  font-weight: 500;
 	}
 	span.icon {
-	float:left;
+	  float:left;
+	  color: #6a74af;
 	}
 	p {
 	  padding-left: 25px;
