--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
     meta(property='' content='')
     meta(property='' content='')
     link(rel='' type='')
-    link(rel='stylesheet' 'https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed')
+    link(rel='stylesheet' 'https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab')
     link(href='//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet')
 
 
