--- a/views/listing.pug
+++ b/views/listing.pug
@@ -11,7 +11,7 @@ block contents
     div.purple-box
       div.inner-box
         h1 THE HELP BOOK
-        h3 A Platform for Care
+        p Building community through wellness and empowerment
 
       div.search
       include search.pug
