--- a/views/listings.pug
+++ b/views/listings.pug
@@ -11,7 +11,7 @@ block contents
       div.inner-box
         img(src='../public/images/put-a-bird-on-it_preview.png').logo
         h1 THE HELP BOOK
-        h3 A Platform for Care
+        p Building community through wellness and empowerment
 
       div.search
       include search.pug
